Fix mobile view overflow

--- a/styles/chat.module.css
+++ b/styles/chat.module.css
@@ -1,6 +1,12 @@
 .header{
-  @apply text-center bg-white fixed top-0 left-0 w-full p-4 z-10 shadow;
+  @apply text-center bg-white fixed top-0 left-0 w-full p-3 z-10 shadow;
   box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+}
+
+.chat{
+  @apply relative p-4 max-w-lg mx-auto;
+  margin-top: 4.5rem;
+      min-height: calc(100vh - 82px);
 }
 
 .system {
